# drillx

./: .gitmodules  Cargo.toml  README.md  flake.nix  noise.txt  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs
corex/: Cargo.toml
corex/src/: lib.rs  siphash.rs
demo/: Cargo.toml
demo/src/: main.rs  utils.rs
demo/src/ops/: add.rs  div.rs  left.rs  mask.rs  mod.rs  mul.rs  right.rs  sqrt.rs  sub.rs  xor.rs
drillhash/: Cargo.toml
drillhash/src/: lib.rs  operator.rs  utils.rs
drillhash/src/ops/: add.rs  addl.rs  div.rs  mod.rs  mul.rs  mull.rs  sub.rs  subl.rs
drillhx/: Cargo.toml
drillhx/src/: lib.rs  operator.rs
drillx/: Cargo.toml  README.md  build.rs
drillx/benches/: drillx_bench.rs  drillx_compiled.rs
drillx/cuda/: drillx.cu  drillx.h
drillx/cuda/equix/hashx/src/: blake2.cu  blake2.h  compiler.c  compiler_a64.c  compiler_x86.cu  context.cu  context.h  hashx.c  hashx.cu  hashx_thread.c  hashx_thread.h  program.cu  program.h  program_exec.c  siphash.c  siphash_rng.c  virtual_memory.c  virtual_memory.h
drillx/cuda/equix/include/: equix.h
drillx/cuda/equix/src/: context.cu  equix.cu  solver.cu  solver.h  solver_heap.h
drillx/cuda/hashx/: CMakeLists.txt
drillx/cuda/hashx/include/: hashx.h
drillx/cuda/hashx/src/: blake2.cu  blake2.h  compiler.cu  compiler.h  compiler_x86.cu  context.cu  hashx.cu  hashx_endian.h  program.cu  program.h  siphash.cu  siphash.h  siphash_rng.cu  siphash_rng.h
drillx/cuda/mylib/: mylib.c  mylib.cu  mylib.h
drillx/kernels/: keccak.cu  keccak.h  orev2.cu  orev2.h  utils.cu  utils.h
drillx/src/: cuda.rs  gpu.rs  lib.rs  noise.rs  operator.rs  operator2.rs  utils.rs
equix/: Cargo.toml  README.md
equix/bench/: Cargo.toml
equix/bench/benches/: equix_bench.rs
equix/fuzz/: .gitignore  Cargo.toml  corpus
equix/fuzz/fuzz_targets/: buckets.rs
equix/src/: bucket_array.rs  collision.rs  err.rs  lib.rs  solution.rs  solver.rs
equix/src/bucket_array/: hash.rs  mem.rs
equix/tests/: equix_hash.rs  equix_verify.rs  tor_equix_vectors.rs
examples/: Cargo.toml
examples/example-1/: Cargo.toml
examples/example-1/src/: main.rs
examples/example-2/: Cargo.toml
examples/example-2/src/: main.rs
examples/example-3/: Cargo.toml
examples/example-3/src/: main.rs
examples/src/: main.rs
haraka-bpf/: Cargo.toml  README.md
haraka-bpf/.cargo/: config.toml
haraka-bpf/src/: constants.rs  haraka256.rs  haraka512.rs  lib.rs  simd128.rs
haraka-rs/: Cargo.toml  README.md
haraka-rs/src/: haraka256.rs  haraka512.rs  lib.rs  simd128.rs
harakax/: Cargo.toml
harakax/src/: lib.rs  siphash.rs
hashx/: Cargo.toml  README.md
hashx/bench/: Cargo.toml
hashx/bench/benches/: hashx_bench.rs  hashx_cachegrind.rs
hashx/fuzz/: Cargo.toml  corpus
hashx/fuzz/fuzz_targets/: rng.rs
hashx/src/: compiler.rs  constraints.rs  err.rs  generator.rs  lib.rs  program.rs  rand.rs  register.rs  scheduler.rs
hashx/src/compiler/: aarch64.rs  util.rs  x86_64.rs
hashx/tests/: hashx_gen.rs  hashx_vectors.rs
program/: Cargo.toml  program-id.json
program/src/: lib.rs
program/tests/: test.rs  test_verify.rs
src/: main.rs
verus/: README.md  common.h  haraka_portable.c  haraka_portable.h  verus.cc  verus_clhash.h  verus_hash.cpp  verus_hash.h
verus-rs/: Cargo.toml
verus-rs/src/: lib.rs
verusx/: Cargo.toml
verusx/src/: lib.rs
