[workspace]
resolver = "2"
members = ["drillx", "examples/*", "program"]

[workspace.dependencies]
blake3 = "1.5"
bytemuck = "1.16.1"
criterion = { version = "0.5", features = ["html_reports"] }
equix = "0.1.4"
solana-program = "1.18.11"
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
