[package]
name = "drillhash"
version = "0.1.0"
description = "Drillhash is an asic-resistant hashing algorithm for Ore."
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/hardhatchad/ore-app"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drillhash"

[features]
default = []
solana = ["solana-program"]

[dependencies]
blake3 = { workspace = true }
enum_dispatch = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
primes = { workspace = true }
sha3 = { workspaace = true }
solana-program = { workspace = true, optional = true }
strum = { workspace = true }
