[package]
name = "drillx"
description = "Drillx is a proof-of-work algorithm for cryptocurrency mining on Solana."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drillx"

[features]
default = []
cpu = ["equix/cpu"]
cpu-bpf = ["equix/cpu-bpf", "solana-program"]
gpu = ["equix/gpu"]
gpu-bpf = ["equix/gpu-bpf", "solana-program"]

[dependencies]
sha3.workspace = true
equix = { workspace = true }
serde.workspace = true
solana-program = { workspace = true, optional = true }
strum.workspace = true 

[dev-dependencies]
criterion = { workspace = true, default-features = true, features = ["html_reports"] }

[build-dependencies]
cc = { version = "1.0", optional = true }
