[package]
name = "harakax"
description = "Harakax ..."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "harakax"

[features]
default = []
solana = ["haraka-bpf", "solana-program"]
instrinsics = ["haraka"]

[dependencies]
blake2 = "0.10.6"
haraka = { workspace = true, optional = true }
haraka-bpf = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

