[package]
name = "drillx-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
no-entrypoint = []
default = []

[dependencies]
bytemuck = { workspace = true }
drillx = { path = "../drillx" }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
