[package]
name = "program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
default = []

[dependencies]
bytemuck = { workspace = true }
drillx = { path = "../drillx", default-features = false, features = ["solana"] }
solana-program = { workspace = true }

[dev-dependencies]
drillx = { path = "../drillx" }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
