[package]
name = "verus-rs"
description = "Verus hash ..."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "harakax"

[features]
default = []

[dependencies]
haraka-bpf = { workspace = true }

[dev-dependencies]
hex = "0.4.3"