[package]
name = "verusx"
description = "VerusX ..."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "verusx"

[features]
default = []
solana = ["verus-rs/solana"]
instrinsics = ["verus-rs/instrinsics"]

[dependencies]
verus-rs = { workspace = true }
