[package]
name = "example-2"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[[bin]]
name = "example-2"

[dependencies]
drillx = { path = "../../drillx" }
