[package]
name = "example-3"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[[bin]]
name = "example-3"

[dependencies]
drillx = { path = "../../drillx" }
