[package]
name = "hashx-bench"
version = "0.0.0"
publish = false
edition = "2021"

[[bench]]
name = "hashx_bench"
harness = false

[[bench]]
name = "hashx_cachegrind"
harness = false

[dev-dependencies]
criterion = "0.5.1"
hashx = { path = "../" }
iai = "0.1.1"
rand = "0.9"
tor-c-equix = { git = "https://gitlab.torproject.org/tpo/core/tor.git" }

[workspace]
members = ["."]

[profile.bench]
# Inherits release build settings, but adds full debug symbols.
debug = 2
strip = "none"
